..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
A.F....... [ZBX-7781] fixed no error being triggered when trying to pass the "auth" parameter to a method that does not require authentication (Pavels)
..F....... [ZBX-8001] fixed host massupdate inventory tab being reset after choosing an inventory mode (Ivo)
..F....... [ZBX-7873] removed redundant error message in login page in event when frontend access for guest is not available (Eduard)
..F....... [ZBX-7969] fixed discovery checks sorting in action configuration page (Eduard)
..F....... [ZBX-7969] fixed sorting by name in discovery rule page (Eduard)
..F....... [ZBX-7826] fixed padding near textarea in acknowledges page (Eduard)
...G...PS. [ZBX-4998] fixed inconsistency of logging on Linux and Windows agents, and fixed information level logging at debug level 0 (igors)
....I..... [ZBX-6235] fixed unnecessary compilation of C code when only --enable-java is passed to ./configure (asaveljevs)
...G...PS. [ZBX-5546] removed formatting of JSON objects and escaping of forward slash/solidus (igors)
..F....... [ZBX-7749] fixed possibility to set up database with default setting "Autocommit OFF" (Ivo)
........S. [ZBX-7140] fixed SQL query to retrieve data for host updates sorted from the database (Juris)
...G...... [ZBX-7673] removed strict necessity for a configuration for options that don't require it (Juris)
..F....... [ZBX-7786] fixed cell limit formatting with ellipsis (Eduard)
..F....... [ZBX-7727] added SQL connection error displaying for Oracle and DB2 (Oleg)
....I..... [ZBX-5789] removed unused fields in graph_discovery table (Sasha)