@@ -45,23 +45,18 @@ check_fields($fields);
  * Permissions
  */
 $dbGraph = API::Graph()->get(array(
-	'graphids' => $_REQUEST['graphid'],
-	'output' => API_OUTPUT_EXTEND
+	'output' => API_OUTPUT_EXTEND,
+	'selectGraphItems' => API_OUTPUT_EXTEND,
+	'selectHosts' => array('name'),
+	'graphids' => $_REQUEST['graphid']
 ));
+
 if (!$dbGraph) {
 	access_deny();
 }
 else {
 	$dbGraph = reset($dbGraph);
 }
-
-$host = API::Host()->get(array(
-	'nodeids' => get_current_nodeid(true),
-	'graphids' => $_REQUEST['graphid'],
-	'output' => API_OUTPUT_EXTEND,
-	'templated_hosts' => true
-));
-$host = reset($host);
 
 /*
  * Display
@@ -76,13 +71,45 @@ $timeline = CScreenBase::calculateTime(array(
 
 CProfile::update('web.screens.graphid', $_REQUEST['graphid'], PROFILE_TYPE_ID);
 
+$graph = new CLineGraphDraw($dbGraph['graphtype']);
+
+// array sorting
+CArrayHelper::sort($dbGraph['gitems'], array(
+	array('field' => 'sortorder', 'order' => ZBX_SORT_UP),
+	array('field' => 'itemid', 'order' => ZBX_SORT_DOWN)
+));
+
+// get graph items
+foreach ($dbGraph['gitems'] as $gItem) {
+	$graph->addItem(
+		$gItem['itemid'],
+		$gItem['yaxisside'],
+		$gItem['calc_fnc'],
+		$gItem['color'],
+		$gItem['drawtype'],
+		$gItem['type']
+	);
+}
+
+$hostName = '';
+
+foreach ($dbGraph['hosts'] as $gItemHost) {
+	if ($hostName === '') {
+		$hostName = $gItemHost['name'];
+	}
+	elseif ($hostName !== $gItemHost['name']) {
+		$hostName = '';
+		break;
+	}
+}
+
 $chartHeader = '';
 if (id2nodeid($dbGraph['graphid']) != get_current_nodeid()) {
 	$chartHeader = get_node_name_by_elid($dbGraph['graphid'], true, NAME_DELIMITER);
 }
-$chartHeader .= $host['name'].NAME_DELIMITER.$dbGraph['name'];
 
-$graph = new CLineGraphDraw($dbGraph['graphtype']);
+$chartHeader .= ($hostName === '') ? $dbGraph['name'] : $hostName.NAME_DELIMITER.$dbGraph['name'];
+
 $graph->setHeader($chartHeader);
 $graph->setPeriod($timeline['period']);
 $graph->setSTime($timeline['stime']);
@@ -114,24 +141,6 @@ $graph->setYMinItemId($dbGraph['ymin_itemid']);
 $graph->setYMaxItemId($dbGraph['ymax_itemid']);
 $graph->setLeftPercentage($dbGraph['percent_left']);
 $graph->setRightPercentage($dbGraph['percent_right']);
-
-$dbGraphItems = DBselect(
-	'SELECT gi.*'.
-	' FROM graphs_items gi'.
-	' WHERE gi.graphid='.zbx_dbstr($dbGraph['graphid']).
-	' ORDER BY gi.sortorder,gi.itemid DESC'
-);
-while ($dbGraphItem = DBfetch($dbGraphItems)) {
-	$graph->addItem(
-		$dbGraphItem['itemid'],
-		$dbGraphItem['yaxisside'],
-		$dbGraphItem['calc_fnc'],
-		$dbGraphItem['color'],
-		$dbGraphItem['drawtype'],
-		$dbGraphItem['type']
-	);
-}
-
 $graph->draw();
 
 require_once dirname(__FILE__).'/include/page_footer.php';
